layout updates on smaller VWs + preloader position set to fixed.

--- a/src/components/about.module.scss
+++ b/src/components/about.module.scss
@@ -75,6 +75,9 @@
   @include media("<=lgPhone") {
     font-size: 7rem;
   }
+  @include media("<=phone") {
+    font-size: 6.2rem;
+  }
 }
 
 .gridContainer {
