--- a/src/components/contact.module.scss
+++ b/src/components/contact.module.scss
@@ -6,6 +6,10 @@
     padding: 2rem;
   }
 }
+.contact_left {
+  flex: 1.2;
+  width: 100%;
+}
 .contact_para {
   margin-top: 6rem;
   max-width: 50%;
@@ -36,15 +40,15 @@
 .line_wrap {
   overflow: hidden;
   height: 160px;
-  @include media("<=tablet") {
-    height: 125px;
+  @include media("<=smDesktop") {
+    height: 120px;
   }
 
   @include media("<=smTablet") {
-    height: 100px;
+    height: 90px;
   }
   @include media("<=lgPhone") {
-    height: 80px;
+    height: 70px;
   }
   @include media("<=phone") {
     height: 60px;
@@ -52,6 +56,14 @@
 }
 .line1,
 .line2 {
+  line-height: 1.3;
+
+  // @include media("<=lgDesktop") {
+  //   font-size: 13rem;
+  // }
+  @include media("<=smDesktop") {
+    font-size: 11rem;
+  }
   @include media("<=tablet") {
     font-size: 11rem;
   }
@@ -81,7 +93,8 @@
 }
 
 .formContainer {
-  margin-top: 15rem;
+  flex: 1;
+  margin-top: 12rem;
   @include media("<=laptop") {
     width: 100%;
     margin-top: 12.5rem;
@@ -97,7 +110,7 @@
   }
 }
 .formWrapper {
-  width: 600px;
+  width: 100%;
   margin-bottom: 1rem;
   @include media("<=laptop") {
     width: 100%;
@@ -128,12 +141,16 @@ label {
   font-size: 1.6rem;
 }
 #name {
+  font-family: arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -moz-appearance: none;
   -webkit-appearance: none;
   -webkit-border-radius: 0;
   border-radius: 0;
 }
 #email {
+  font-family: arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -moz-appearance: none;
   -webkit-appearance: none;
   -webkit-border-radius: 0;
@@ -147,8 +164,8 @@ textArea {
   font-size: 1.6rem;
   padding: 1rem;
   border: 2px solid black;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   resize: none;
   &:focus {
     outline: none;
