--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -27,6 +27,9 @@
   // @include media("<=desktop") {
   //   max-width: 1024px;
   // }
+  @include media("<=smDesktop") {
+    max-width: 1082px;
+  }
   @include media("<=laptop") {
     max-width: 768px;
   }
