--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -114,8 +114,8 @@
   }
 }
 .preloadBg {
-  height: 100vh;
-  min-width: 100vw;
+  height: auto;
+  width: 100vw;
 
   // margin: 1em calc(50% - 50vw);
   // transform: translateX(-24rem);
@@ -127,7 +127,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  position: absolute;
+  position: fixed;
   z-index: 1000;
   overflow: hidden;
   text-align: center;
@@ -153,7 +153,7 @@
   // transform: translate(-50%, -50%);
   z-index: 10000;
 
-  animation: spinLoader 2.8s cubic-bezier(0.87, 0.32, 0, 0.39) 1 forwards;
+  animation: spinLoader 2.5s cubic-bezier(0.87, 0.32, 0, 0.39) 1 forwards;
 }
 .arrow {
   i {
@@ -169,7 +169,7 @@
   font-weight: bold;
   font-size: 1.5rem;
   cursor: pointer;
-  margin-right: 3rem;
+  margin-right: 4rem;
   // height: 40px;
   // width: 50px;
   line-height: 1;
@@ -193,7 +193,7 @@
       transform: translateX(-5px);
     }
   }
-  @include media("<=tablet") {
+  @include media("<=laptop") {
     display: none;
   }
   // animation: shake 2s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite
@@ -229,7 +229,7 @@
   overflow: hidden;
   position: absolute;
   max-width: 100%;
-  right: 0;
+  right: 45px;
   top: 160px;
   transform: translateY(60px);
   @include media("<=smDesktop") {
